# coinbase-streaming

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  pyright.yml  ruff.yml
data-scripts/: coinbase_direct.py
