[tool.poetry]
name = "coinbase-streaming"
version = "0.1.0"
description = "Streaming workflows implemented in AWS intended for fun."
authors = ["Jose Vicente Yago Martinez <whatawonderfulworld@gmail.com>"]
readme = "README.md"

[tool.pyright]
include = ["data-scripts/"]
typeCheckingMode = "standard"
defineConstant = { DEBUG = true }
reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalOperand = false
reportUnboundVariable = false
reportUnusedExpression = false
reportMissingModuleSource = false
pythonVersion = "3.8"
pythonPlatform = "Linux"

[tool.ruff]
select = ["E", "F", "I", "B", "W", "A", "N", "UP", "COM", "DTZ", "TID", "PD", "C90", "ANN", "D", "RUF"]
ignore = ["D212", "D203", "RUF100"]
fixable = ["I", "RUF100"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Same as Black.
line-length = 88
indent-width = 4

[tool.poetry.dependencies]
python = "^3.8"
websockets = "12"
PyJWT = "^2.8.0"
coinbase = "^2.1.0"
black = "^24.2.0"
pyright = "^1.1.352"
ruff = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
